Projekt/config/app_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: appservice
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: app
