Projekt/config/backend_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backendservice
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      nodePort: 30500
  selector:
    app: app
  type: NodePort
